Detalles estilo y se agrega 3er punto de corte

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
             <div class='menu-hamb'></div>
         </label>
         <ul class="menu">
-            <li><a href="#"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="#"><a href="#"><i class="fa-solid fa-house"></i></a></li> <!-- Icono de FontAwesome -->
             <li><a href="#">Nosotros</a></li>
             <li><a href="#">Productos</a></li>
             <li><a href="#">Acordes?</a></li>
