Agregadas etiquetas semánticas section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 
-    
+
     <!-- HAMBURGER NAVBAR -->
 
 
@@ -54,51 +54,51 @@
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
-    
+
     <br><br><br>
 
 
     <!-- LOGO Y TITULOS -->
 
-
-    <div>
-        <p class="logo" id="titulo">GAROMBAH</p>
-    </div>
-    <br>
-    <h1 id="lema"> Guitarras para rockeros duros</h1>
-    <br><br><br>
-
+    <section>
+        <div>
+            <p class="logo" id="titulo">GAROMBAH</p>
+        </div>
+        <br>
+        <h1 id="lema"> Guitarras para rockeros duros</h1>
+        <br><br><br>
+    </section>
 
     <!-- ACA Flex o Carousel Grande con Destacados -->
 
+    <section>
+        <h2 style="color: white;">Flex o Carousel Grande con Destacados</h2>
 
-    <h2 style="color: white;">Flex o Carousel Grande con Destacados</h2>
-
-    <br><br><br>
-
+        <br><br><br>
+    </section>
 
     <!-- GRID DE CONTENIDOS -->
 
-
-    <div class="grid-container">
-        <div class="grid-item item1"><a href="#"><img src="/img/Nosotros-grid.png" alt="Nosotros" width="100%"><br>
-                <p>Nosotros</p>
-            </a>
+    <section>
+        <div class="grid-container">
+            <div class="grid-item item1"><a href="#"><img src="/img/Nosotros-grid.png" alt="Nosotros" width="100%"><br>
+                    <p>Nosotros</p>
+                </a>
+            </div>
+            <div class="grid-item"><a href="#"><img src="/img/Productos-grid.png" alt="Productos"><br>
+                    <p> Productos</p>
+                </a>
+            </div>
+            <div class="grid-item"><a href="#"><img src="/img/acordes-grid.jpg" alt="Acordes"><br>
+                    <p> Galería (acordes?)</p>
+                </a>
+            </div>
+            <div class="grid-item item4"><a href="#"><img src="/img/Contacto-grid.jpg" alt="Contacto"><br>
+                    <p> Contacto</p>
+                </a>
+            </div>
         </div>
-        <div class="grid-item"><a href="#"><img src="/img/Productos-grid.png" alt="Productos"><br>
-                <p> Productos</p>
-            </a>
-        </div>
-        <div class="grid-item"><a href="#"><img src="/img/acordes-grid.jpg" alt="Acordes"><br>
-                <p> Galería (acordes?)</p>
-            </a>
-        </div>
-        <div class="grid-item item4"><a href="#"><img src="/img/Contacto-grid.jpg" alt="Contacto"><br>
-                <p> Contacto</p>
-            </a>
-        </div>
-    </div>
-
+    </section>
 
     <!-- FOOTER -->
 
