Reorganizacion Carpeta GIT

--- a/Contato.html
+++ b/Contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/contactos.css">
 
     <link rel="icon" href="/icon/fender.ico" type="image/x-icon">
 
@@ -26,12 +26,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
-    <title>Guitarras GarombaH</title>
-
+    <title>Contacto</title>
 </head>
 
 <body>
-
 
     <!-- HAMBURGER NAVBAR -->
 
@@ -45,8 +43,7 @@
             <div class='menu-hamb'></div>
         </label>
         <ul class="menu">
-            <li><a href="index.html"><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
-            <!-- Icono de FontAwesome -->
+            <li><a href="#"><a href="#"><i class="fa-solid fa-house"></i></a></li> <!-- Icono de FontAwesome -->
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="Productos.html">Productos</a></li>
             <li><a href="acordes.html">Acordes</a></li>
@@ -68,32 +65,6 @@
         <br><br><br>
     </section>
 
-    <!-- ACA Flex o Carousel Grande con Destacados -->
-
-
-    <!-- GRID DE CONTENIDOS -->
-
-    <section>
-        <div class="grid-container">
-            <div class="grid-item item1"><a href="nosotros.html"><img src="/img/Nosotros-grid.png" alt="Nosotros"
-                        width="100%"><br>
-                    <p>Nosotros</p>
-                </a>
-            </div>
-            <div class="grid-item"><a href="Productos.html"><img src="/img/Productos-grid.png" alt="Productos"><br>
-                    <p> Productos</p>
-                </a>
-            </div>
-            <div class="grid-item"><a href="acordes.html"><img src="/img/acordes-grid.jpg" alt="Acordes"><br>
-                    <p> Galería (acordes)</p>
-                </a>
-            </div>
-            <div class="grid-item item4"><a href="Contato.html"><img src="/img/Contacto-grid.jpg" alt="Contacto"><br>
-                    <p> Contacto</p>
-                </a>
-            </div>
-        </div>
-    </section>
 
     <!-- FOOTER -->
 
@@ -121,3 +92,6 @@
             </div>
         </div>
     </footer>
+</body>
+
+</html>
