Se agrega Footer con animacion

--- a/acordes.html
+++ b/acordes.html
@@ -72,22 +72,23 @@
     <footer>
         <div class="flex-container-footer">
             <div style="font-family: 'Metal Mania', cursive">
-                <br>
-                </h1>GAROMBAH</h1>
+            </p>GAROMBAH</p>
             </div>
             <div><a href="nosotros.html">
                     <p>Nosotros</p>
                 </a>
             </div>
 
-            <div>Redes
-                <div>Ig</div>
-                <div>Fb</div>
-                <div>Tw</div>
-            </div>
-            <div style="font-family: 'Metal Mania', cursive">
-                <br>
-                Guitarras GAROMBAH
+            <div>
+                <span style="padding: 10px;">Seguinos:</span>
+                <div class="ig icon-redes"><a href="#"><img src="/icon/Ico_Ig_transp.png" alt="Instagram"
+                            height="100%"></a></div>
+                <div class="fb icon-redes"><a href="#"><img src="./icon/Ico_FB_transp.png" alt="Facebook"
+                            height="100%"></a></div>
+                <div class="wap icon-redes"><a href="#"><img src="/icon/Ico_Wapp_transp.png" alt="Whatsapp"
+                            height="100%"></a></div>
+                <div class="tw icon-redes"><a href="#"><img src="/icon/Ico_Tw_transp.png" alt="Twitter"
+                            height="100%"></a></div>
             </div>
         </div>
     </footer>
