--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-    <link rel="icon" href="/icon/fender.ico" type="image/x-icon">
+    <link rel="icon" href="icon/fender.ico" type="image/x-icon">
 
     <!-- Icono Home de FontAwesome -->
     <script src="https://kit.fontawesome.com/5a5e2df851.js" crossorigin="anonymous"></script>
@@ -40,12 +40,12 @@
         <div class="logo">
             Guitarras GAROMBAH
         </div>
-        <input type="checkbox" id="menu-check" />
+        <input type="checkbox" id="menu-check">
         <label class='menu-hamb-container' for="menu-check">
             <div class='menu-hamb'></div>
         </label>
         <ul class="menu">
-            <li><a href="index.html"><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
             <!-- Icono de FontAwesome -->
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="Productos.html">Productos</a></li>
@@ -75,20 +75,20 @@
 
     <section>
         <div class="grid-container">
-            <div class="grid-item item1"><a href="nosotros.html"><img src="/img/Nosotros-grid.png" alt="Nosotros"
+            <div class="grid-item item1"><a href="nosotros.html"><img src="img/Nosotros-grid.png" alt="Nosotros"
                         width="100%"><br>
                     <p>Nosotros</p>
                 </a>
             </div>
-            <div class="grid-item"><a href="Productos.html"><img src="/img/Productos-grid.png" alt="Productos"><br>
+            <div class="grid-item"><a href="Productos.html"><img src="img/Productos-grid.png" alt="Productos"><br>
                     <p> Productos</p>
                 </a>
             </div>
-            <div class="grid-item"><a href="acordes.html"><img src="/img/acordes-grid.jpg" alt="Acordes"><br>
+            <div class="grid-item"><a href="acordes.html"><img src="img/acordes-grid.jpg" alt="Acordes"><br>
                     <p> Acordes</p>
                 </a>
             </div>
-            <div class="grid-item item4"><a href="Contato.html"><img src="/img/Contacto-grid.jpg" alt="Contacto"><br>
+            <div class="grid-item item4"><a href="Contato.html"><img src="img/Contacto-grid.jpg" alt="Contacto"><br>
                     <p> Contacto</p>
                 </a>
             </div>
@@ -102,7 +102,7 @@
     <footer>
         <div class="flex-container-footer">
             <div style="font-family: 'Metal Mania', cursive">
-            </p>GAROMBAH</p>
+            <p>GAROMBAH</p>
             </div>
             <div><a href="nosotros.html">
                     <p>Nosotros</p>
@@ -111,13 +111,13 @@
 
             <div>
                 <span style="padding: 10px;">Seguinos:</span>
-                <div class="ig icon-redes"><a href="#"><img src="/icon/Ico_Ig_transp.png" alt="Instagram"
+                <div class="ig icon-redes"><a href="#"><img src="icon/Ico_Ig_transp.png" alt="Instagram"
                             height="100%"></a></div>
-                <div class="fb icon-redes"><a href="#"><img src="./icon/Ico_FB_transp.png" alt="Facebook"
+                <div class="fb icon-redes"><a href="#"><img src="icon/Ico_FB_transp.png" alt="Facebook"
                             height="100%"></a></div>
-                <div class="wap icon-redes"><a href="#"><img src="/icon/Ico_Wapp_transp.png" alt="Whatsapp"
+                <div class="wap icon-redes"><a href="#"><img src="icon/Ico_Wapp_transp.png" alt="Whatsapp"
                             height="100%"></a></div>
-                <div class="tw icon-redes"><a href="#"><img src="/icon/Ico_Tw_transp.png" alt="Twitter"
+                <div class="tw icon-redes"><a href="#"><img src="icon/Ico_Tw_transp.png" alt="Twitter"
                             height="100%"></a></div>
             </div>
         </div>
