Se agrega página " Nosotros"

--- a/nosotros.html
+++ b/nosotros.html
@@ -26,6 +26,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 
+    <!-- Google Font MedievalSharp -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet"> -->
+
+    <!-- Google Font Uncial Antiqua -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+
     <title>Nosotros</title>
 </head>
 
@@ -70,7 +80,51 @@
     <!-- Contenido de la pagina -->
 
 
+    <section>
+        <h1 class="titulo">Un poco de historia...</h1>
+        <hr>
+        <div class="parrNos">
+            <div class="parr1">
+                <p>Cuenta la leyenda que a fines del Siglo XVI, el Conde de Garombah, Charles
+                    Garombius III,
+                    ordenó a todos los lutieres, carpinteros y artesanos del reino la confección de una guitarra cuyo
+                    resonar fuera tan
+                    perfecto, armonioso y fluido, que compensara su absoluta falta de talento musical. Aquellos que
+                    presentaran los mejores ejemplares serían premiados muy generosamente. Quienes disgustaran al Conde
+                    serían colgados o, los más agraciados, enviados al campo de batalla.</p>
+            </div>
+            <div class="parr2">
+                <p>Se dice que la obstinación e ineptitud de Charles fue tal que, una tras otra,
+                    las más
+                    magníficas guitarras construidas por el ser humano fueron rechazadas y abandonadas, sin siquiera
+                    haber
+                    dado un
+                    melódico suspiro. Quienes sí suspiraron, pero por última vez... fueron todos los carpinteros de
+                    Garombah.</p>
+            </div>
 
+            <div class="parr3">
+                <p>Cinco siglos después y luego de un viaje lisérgico, tres amigos del Oeste del
+                    Conurbano
+                    Bonaerense despiertan inexplicablemente en un enorme terreno abandonado junto a una incontable
+                    cantidad
+                    de
+                    guitarras las cuales, sobre su lomo, mostraban la inscripción "para el Conde Charles de Garombah".
+                    <br><br>
+                </p>
+            </div>
+
+            <div class="parr4">
+                <p>SOMOS ESOS TRES AMIGOS. NOS UNE A AQUEL CONDE NUESTRA FALTA DE TALENTO Y NOS
+                    UNE ENTRE
+                    NOSOTROS EL DESEO DE OFRECER A LA GENTE INCAPAZ, GUITARRAS TAN SUBLIMES Y DE TAL CALIDAD, QUE NO SEA
+                    IMPRESCINDIBLE SABER
+                    TOCARLAS PARA APARENTAR SER BUENOS MÚSICOS.</p>
+            </div>
+
+        </div>
+        <hr>
+    </section>
 
 
     <!-- FOOTER -->
@@ -80,7 +134,7 @@
     <footer>
         <div class="flex-container-footer">
             <div style="font-family: 'Metal Mania', cursive">
-            <p>GAROMBAH</p>
+                <p>GAROMBAH</p>
             </div>
             <div><a href="nosotros.html">
                     <p>Nosotros</p>
