--- a/acordes.html
+++ b/acordes.html
@@ -65,6 +65,47 @@
         <br><br><br>
     </section>
 
+    <!-- GRID DE CONTENIDOS -->
+
+    <section>
+        <script>
+            function tocar(acorde) {
+                audio = new Audio()
+                audio.src = (acorde)
+                audio.play()
+            }
+        </script>
+        <div class="grid-container">
+            <div class="grid-item item1" onclick="tocar('Notas/do/do.mp3')">
+                <img src="acordes/do.png" alt="Do" width="100%"><br>
+                <p>DO</p>
+            </div>
+            <div class="grid-item item2" onclick="tocar('Notas/re/re.mp3')">
+                <img src="acordes/re.png" alt="re" width="100%"><br>
+                <p>RE</p>
+            </div>
+            <div class="grid-item item3" onclick="tocar('Notas/mi/mi.mp3')">
+                <img src="acordes/mi.png" alt="mi" width="100%"><br>
+                <p>MI</p>
+            </div>
+            <div class="grid-item item4" onclick="tocar('Notas/fa/fa.mp3')">
+                <img src="acordes/fa.png" alt="fa" width="100%"><br>
+                <p>FA</p>
+            </div>
+            <div class="grid-item item5" onclick="tocar('Notas/sol/sol.mp3')">
+                <img src="acordes/sol.png" alt="sol" width="100%"><br>
+                <p>SOL</p>
+            </div>
+            <div class="grid-item item6" onclick="tocar('Notas/la/la.mp3')">
+                <img src="acordes/la.png" alt="la" width="100%"><br>
+                <p>LA</p>
+            </div>
+            <div class="grid-item item7" onclick="tocar('Notas/si/si.mp3')">
+                <img src="acordes/Si.png" alt="si" width="100%"><br>
+                <p>SI</p>
+            </div>
+</section>
+
     <!-- FOOTER -->
 
 
@@ -72,7 +113,7 @@
     <footer>
         <div class="flex-container-footer">
             <div style="font-family: 'Metal Mania', cursive">
-            <p>GAROMBAH</p>
+                <p>GAROMBAH</p>
             </div>
             <div><a href="nosotros.html">
                     <p>Nosotros</p>
