Reemplazando pagina productos.html
Cambiando la pagina vacia por una con la informacion.

--- a/Productos.html
+++ b/Productos.html
@@ -66,6 +66,39 @@
     </section>
 
 
+    <!-- GRID DE CONTENIDOS -->
+
+    <section>
+        <script>
+            function tocar(acorde) {
+                audio = new Audio()
+                audio.src = (acorde)
+                audio.play()
+            }
+        </script>
+        <div class="grid-container">
+            <div class="grid-item item1" onclick="tocar('')">
+                <img src="img/guitarra-criolla.png" alt="" width="100%"><br>
+                <p>Guitarra Criolla</p>
+            </div>
+            <div class="grid-item item2" onclick="tocar('')">
+                <img src="img/guitarra-acustica.png" alt="" width="100%"><br>
+                <p>Guitarra Acustica</p>
+            </div>
+            <div class="grid-item item3" onclick="tocar('')">
+                <img src="img/guitarra-electrica.png" alt="" width="100%"><br>
+                <p>Guitarra Electrica</p>
+            </div>
+            <div class="grid-item item4" onclick="tocar('')">
+                <img src="img/bajo.png" alt="" width="100%"><br>
+                <p>Bajo</p>
+            </div>
+            </div>
+</section>
+
+
+
+
     <!-- FOOTER -->
 
 
