--- a/Productos.html
+++ b/Productos.html
@@ -77,20 +77,20 @@
             }
         </script>
         <div class="grid-container">
-            <div class="grid-item item1" onclick="tocar('')">
+            <div class="grid-item item1" onclick="tocar('notas/guitarras/guitarra-criolla.mp3')">
                 <img src="img/guitarra-criolla.png" alt="" width="100%"><br>
                 <p>Guitarra Criolla</p>
             </div>
-            <div class="grid-item item2" onclick="tocar('')">
-                <img src="img/guitarra-acustica.png" alt="" width="100%"><br>
+            <div class="grid-item item2" onclick="tocar('notas/guitarras/guitarra-acustica.mp3')">
+                <img src="img/guitarra-acustica.png" alt="guitarra acustica" width="100%"><br>
                 <p>Guitarra Acustica</p>
             </div>
-            <div class="grid-item item3" onclick="tocar('')">
-                <img src="img/guitarra-electrica.png" alt="" width="100%"><br>
+            <div class="grid-item item3" onclick="tocar('notas/guitarras/guitarra-electrica.mp3')">
+                <img src="img/guitarra-electrica.png" alt="guitarra electrica" width="100%"><br>
                 <p>Guitarra Electrica</p>
             </div>
-            <div class="grid-item item4" onclick="tocar('')">
-                <img src="img/bajo.png" alt="" width="100%"><br>
+            <div class="grid-item item4" onclick="tocar('notas/guitarras/bajo-acustico.mp3')">
+                <img src="img/bajo.png" alt="bajo" width="100%"><br>
                 <p>Bajo</p>
             </div>
             </div>
