--- a/acordes.html
+++ b/acordes.html
@@ -122,17 +122,18 @@
 
             <div>
                 <span style="padding: 10px;">Seguinos:</span>
-                <div class="ig icon-redes"><a href="#"><img src="icon/Ico_Ig_transp.png" alt="Instagram"
+                <div class="ig icon-redes"><a href="https://www.instagram.com/guitarrascasas/" target="_blank"><img src="icon/Ico_Ig_transp.png" alt="Instagram"
                             height="100%"></a></div>
-                <div class="fb icon-redes"><a href="#"><img src="icon/Ico_FB_transp.png" alt="Facebook"
+                <div class="fb icon-redes"><a href="https://www.facebook.com/guitarrascasas/" target="_blank"><img src="icon/Ico_FB_transp.png" alt="Facebook"
                             height="100%"></a></div>
-                <div class="wap icon-redes"><a href="#"><img src="icon/Ico_Wapp_transp.png" alt="Whatsapp"
+                <div class="wap icon-redes"><a href="https://wa.me/3532417742" target="_blank"><img src="icon/Ico_Wapp_transp.png" alt="Whatsapp"
                             height="100%"></a></div>
-                <div class="tw icon-redes"><a href="#"><img src="icon/Ico_Tw_transp.png" alt="Twitter"
+                <div class="tw icon-redes"><a href="https://twitter.com/GuitarrasCasas" target="_blank"><img src="icon/Ico_Tw_transp.png" alt="Twitter"
                             height="100%"></a></div>
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
