--- a/Productos.html
+++ b/Productos.html
@@ -62,6 +62,7 @@
         </div>
         <br>
         <h1 id="lema"> Guitarras para rockeros duros</h1>
+        <h4 class="clickEscuchar">( ...click en las guitarras para escuchar... )</h4>
         <br><br><br>
     </section>
 
