--- a/user_contact.html
+++ b/user_contact.html
@@ -4,7 +4,7 @@
   <title>Formulario de contacto</title>
 
  
-  <link rel="stylesheet" type="text/css" href="CSSusercontact.css">
+  <link rel="stylesheet" type="text/css" href="css/CSSusercontact.css">
 -->
   
   </head>
