--- a/user_contact.html
+++ b/user_contact.html
@@ -105,7 +105,7 @@
 </form>
 </main>
 
-<script src="Usercontact2.js"></script>
+<script src="JS/Usercontact2.js"></script>
 
 <footer>
   <div class="flex-container-footer">
